auto-test/tests/chapter_18/invalid_parse/extra_credit/case_struct_decl.c


int main(void) {
    switch (0) {
        case 0:
            struct s {
                int a;
            };
            return 0;
    }
    return 0;
}